<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_name"></TextView>
    <EditText
        android:id="@+id/med_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_duration"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
        <ImageButton
            android:id="@+id/buttonDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:background="@null"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_dose"></TextView>
    <CheckBox
        android:id="@+id/breakfast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        />
    <CheckBox
        android:id="@+id/lunch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        />
    <CheckBox
        android:id="@+id/dinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        />
    <CheckBox
        android:id="@+id/sleep"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleep"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/accept_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_button"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_weight="0.5"/>
    </LinearLayout>

</LinearLayout>