<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:longClickable="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                />
            <TextView
                android:text="@string/med_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"/>
            <TextView
                android:id="@+id/duration"
                android:text=""
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                />
        </LinearLayout>
        <CheckBox android:id="@+id/breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:clickable="false"
            />
        <CheckBox android:id="@+id/lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:clickable="false"
            />
        <CheckBox android:id="@+id/dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner"
            android:clickable="false"
            />
        <CheckBox android:id="@+id/sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep"
            android:clickable="false"
            />
    </LinearLayout>

</LinearLayout>